# ImageResizer

./: .gitignore  README.md
ImageResizer/: ContentView.swift  ImageResizerApp.swift
ImageResizer.xcodeproj/: project.pbxproj
ImageResizer/Extensions/: FileManager+Extensions.swift
ImageResizer/Models/: AppModels.swift
ImageResizer/ViewModels/: ImageResizerViewModel.swift
ImageResizer/Views/: CropOptionsView.swift  CropView.swift  DropZoneView.swift  ImagePreviewView.swift  ResizeOptionsView.swift  ResultView.swift
rust-core/: Cargo.toml  build.rs
rust-core/src/: imgrs_core.udl  lib.rs
scripts/: build-rust.sh  clean.sh
swift-bindings/: imgrs_core.swift  imgrs_coreFFI.h  imgrs_coreFFI.modulemap
