[package]
name = "imgrs-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "imgrs_core"

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
image = "0.25"
fast_image_resize = "5"
thiserror = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
